--- a/server/src/main/config/application.properties
+++ b/server/src/main/config/application.properties
@@ -18,7 +18,7 @@ spring.freemarker.suffix = .ftl
 
 # office-plugin
 ## office转换服务的进程数，默认开启两个进程
-office.plugin.server.ports = 2001,2002
+office.plugin.server.ports = ${KK_OFFICE_PLUGIN_SERVER_PORTS:2001,2002}
 ## office 转换服务 task 超时时间，默认五分钟
 office.plugin.task.timeout = 5m
 
