--- a/server/pom.xml
+++ b/server/pom.xml
@@ -186,6 +186,11 @@
             <scope>system</scope>
             <systemPath>${basedir}/lib/cpdetector-1.04.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <!-- url 规范化 -->
         <dependency>
             <groupId>io.mola.galimatias</groupId>
